<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_category">About</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="accuracy">Accuracy</string>
    <string name="action_title">Action</string>
    <string name="activation_code">Use activation code</string>
    <string name="activation_code2">Enter your activation code:</string>
    <string name="active">Active</string>
    <string name="add_action">+ add action</string>
    <string name="add_condition">+ add condition</string>
    <string name="address">Address</string>
    <string name="admin_button">Enable device admin</string>
    <string name="admin_category">Device administration</string>
    <string name="admin_disabled">Cerberus device admin disabled</string>
    <string name="admin_explanation">Please enable admin rights to get Cerberus advanced features like uninstall protection, remote wipe and lock with password.</string>
    <string name="admin_required">This feature requires Device Administration to be enabled</string>
    <string name="admin_summary_disabled">Click here to enable device admin, so Cerberus can perform remote lock and wipe.</string>
    <string name="admin_summary_enabled">Click here to disable device admin, so you can uninstall Cerberus.</string>
    <string name="admin_title_disabled">Status: Disabled</string>
    <string name="admin_title_enabled">Status: Enabled</string>
    <string name="admin_warning">"Warning: disabling Cerberus admin rights you won't be able to wipe or lock your device remotely!"</string>
    <string name="adminprotect_summary">Ask for username/password to remove Cerberus from Device Administrators</string>
    <string name="adminprotect_title">Protect device admin</string>
    <string name="alarm_message">Alarm message:</string>
    <string name="alerts_label">Alerts Cerberus will send when an unauthorized SIM card is used:</string>
    <string name="any_device">Any device</string>
    <string name="api_unavailable">Android Wear API unavailable. Touch to install the Android Wear app.</string>
    <string name="app_description">Cerberus is a suite of services to protect your phone, yourself and your loved ones: Antitheft - the best protection you can get to recover your misplaced, lost or stolen Android device; Persona - get help in an emergency, share real-time location with your family and friends; Kids - tool for parents to help keep your children safe</string>
    <string name="app_install_desc">You can install our apps from</string>
    <string name="app_name">Cerberus</string>
    <string name="app_name_selected">App name:</string>
    <string name="app_purchased">Thank you for buying Cerberus, please restart the app.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_list">Application list</string>
    <string name="appstore_link">market://details?id=com.lsdroid.cerberus</string>
    <string name="associated_devices">Associated devices</string>
    <string name="audiorec_started">Audio recording started...</string>
    <string name="auth_button">Add to authorized SIM cards</string>
    <string name="authorized_simcards">Authorized SIM cards</string>
    <string name="authorized_wearables">Authorized wearable devices</string>
    <string name="autopic_category">Automatic photo capture</string>
    <string name="autotask">AutoTask</string>
    <string name="autotask_configuration">AutoTask configuration</string>
    <string name="autotask_rules">AutoTask rules</string>
    <string name="available_commands">Available commands:</string>
    <string name="back_again_to_exit">Press BACK again to exit from app</string>
    <string name="backup_already_started">Command not executed: backup already started</string>
    <string name="backup_category">Remote backup</string>
    <string name="backup_completed">Operations completed</string>
    <string name="backup_summary">Account linked:</string>
    <string name="battery">Battery</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="behind_lockscreen">Behind lockscreen</string>
    <string name="blacklist_text">This device can not run Cerberus. If you feel this is in error, click the button below.</string>
    <string name="both_versions">Both the normal and disguised versions of Cerberus are installed. You might want to uninstall one of them.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brief">Brief</string>
    <string name="buy_activity">Buy Cerberus license</string>
    <string name="buy_amazon">Buy on the Amazon Appstore</string>
    <string name="buy_expire">Your license will expire in</string>
    <string name="buy_market">Buy on Google Play</string>
    <string name="buy_paypal">Buy with PayPal</string>
    <string name="buy_preference">Buy license</string>
    <string name="buy_text">"You can buy Cerberus with the method of your choice. No monthly or annual fees, just a small one-time payment to use Cerberus forever. And you won't have to pay again to install Cerberus on another device, just install it and configure it with your account."</string>
    <string name="buy_text2">After you complete the payment, you have to restart Cerberus.</string>
    <string name="buy_website">Buy license from our website</string>
    <string name="by_email">by email</string>
    <string name="by_sms">by SMS</string>
    <string name="c2dm_register_ok">Connectivity is working fine!</string>
    <string name="c2dm_register_title_2">Check GCM connectivity</string>
    <string name="calibrate">The device needs to be calibrated. Please rotate it slowly in every direction, then press Finish</string>
    <string name="cancel">Cancel</string>
    <string name="capture_video_immediately">Capture video immediately</string>
    <string name="capturevideo_message1">Cerberus captured a video. You can find it attached to this message.</string>
    <string name="capturevideo_subject">Cerberus: video captured</string>
    <string name="capturevideo_text">You will receive an email with the video as soon as the thief touches the screen.</string>
    <string name="cerberus_log">View Cerberus log</string>
    <string name="change_account">Change account</string>
    <string name="changeplan_play">Install Cerberus from the Play Store to upgrade your plan</string>
    <string name="changeplan_title">Upgrade Cerberus license</string>
    <string name="changeplan_website">Log into our website to upgrade your plan</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charging">Charging</string>
    <string name="check_updates">Click here to check for updates</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_auth_wearables">Clear all authorized devices?</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">59d64ee3-d52f-4b46-a214-797f9853922b</string>
    <string name="command">Command:</string>
    <string name="command_executed">command executed.</string>
    <string name="command_not_authorized">command NOT EXECUTED. Have you enabled it in Cerberus settings?</string>
    <string name="command_not_executed">command NOT EXECUTED. Have you enabled device administration?</string>
    <string name="command_not_executed2">command NOT EXECUTED. To get this feature your device must be rooted and you have to install Cerberus in /system/app</string>
    <string name="command_not_executed3">command NOT EXECUTED. To get this feature your device must be rooted.</string>
    <string name="command_not_executed4">command NOT EXECUTED. To get this feature your device must have at least Android 4.4 and has to be rooted.</string>
    <string name="command_not_executed_launch_app">command NOT EXECUTED. Application not available.</string>
    <string name="command_not_executed_start_service">command NOT EXECUTED. Service not available.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="create_button">Create account</string>
    <string name="i_agree_to_tos">"I'm at least 16 years old and I agree to the Terms of Service and Privacy Policy"</string>
    <string name="install_tasker">Install Tasker</string>
    <string name="intro_text_v2_5">The \"third head of Cerberus\" is <b>Automatic Alerts</b>!</string>
    <string name="intro_text_v2_6">Cerberus can automatically perform actions when some conditions are met.</string>
    <string name="intro_text_v2_7">For instance, it will send email/SMS alerts if the SIM card is changed (see the \"SIM checker\" section of the settings) and it will email you a photo of the thief when a wrong unlock code is entered (section \"Automatic photo capture\").</string>
    <string name="intro_text_v2_8">You can also set your own rules, see the \"AutoTask\" section!</string>
    <string name="license_error">Cerberus license has expired.</string>
    <string name="not_supported">Not supported on this device.</string>
    <string name="ok">OK</string>
    <string name="option">Option</string>
    <string name="select_plan">Select plan</string>
    <string name="send_me_promotions">Send me special offers and promotional emails regarding Cerberus services from time to time</string>
    <string name="task_name">Task name:</string>
    <string name="uninstall">Uninstall</string>
</resources>