<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="2.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_vertical" android:id="@id/section_image" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/intro2" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/section_text" android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:id="@id/section_description5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/intro_text_v2_5" />
        <TextView android:id="@id/section_description6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/intro_text_v2_6" />
        <TextView android:id="@id/section_description7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/intro_text_v2_7" />
        <TextView android:id="@id/section_description8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/intro_text_v2_8" />
    </LinearLayout>
</LinearLayout>