<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.lsdroid.cerberus.EulaWebView android:id="@id/terms_webview" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" app:layout_constraintBottom_toTopOf="@id/checkBoxTerms" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar android:id="@id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" style="@android:style/Widget.Material.Light.ProgressBar.Large" />
    <CheckBox android:textSize="13.0sp" android:textColor="@color/grey" android:id="@id/checkBoxTerms" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/i_agree_to_tos" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toTopOf="@id/checkBoxMarketing" app:layout_constraintStart_toStartOf="parent" />
    <CheckBox android:textSize="13.0sp" android:textColor="@color/grey" android:id="@id/checkBoxMarketing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/send_me_promotions" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toTopOf="@id/terms_button" app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButton android:id="@id/terms_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/create_button" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    <ProgressBar android:id="@id/progressBar3" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:indeterminate="true" android:elevation="5.0dip" android:progressTint="@color/colorAccent" app:layout_constraintBottom_toBottomOf="@id/terms_button" app:layout_constraintEnd_toEndOf="@id/terms_button" app:layout_constraintStart_toStartOf="@id/terms_button" style="?android:progressBarStyleHorizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>