<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:map="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:fitsSystemWindows="true" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" android:fillViewport="true" map:layout_constraintBottom_toTopOf="@id/cancel_button" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionSpinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/action_title" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toTopOf="parent" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView android:id="@id/action_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/colorAccent" android:gravity="center_horizontal" android:id="@id/action_not_supported" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/not_supported" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionSpinner" />
            <com.google.android.material.button.MaterialButton android:id="@id/install_tasker_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/install_tasker" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_not_supported" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOptionSpinner1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/option" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionSpinner" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView android:id="@id/action_option_spinner1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOptionSpinner2" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/option" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOptionSpinner1" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView android:id="@id/action_option_spinner2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOptionSpinner3" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/option" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOptionSpinner2" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView android:id="@id/action_option_spinner3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOptionSpinner4" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/option" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOptionSpinner3" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                <AutoCompleteTextView android:id="@id/action_option_spinner4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOption1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOptionSpinner4" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/action_options_edittext1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="20" android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOption2" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOption1" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/action_options_edittext2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOption3" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/task_name" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOption2" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/action_options_edittext3" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/textInputLayoutActionOption4" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/app_name" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOption3" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/action_options_edittext4" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:editable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/action_option_checkbox_1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_option_seekBar1_text" />
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/action_option_checkbox_2" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_option_checkbox_1" />
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/action_option_checkbox_3" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_option_checkbox_2" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/action_option_seekBar1_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="24.0dip" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/textInputLayoutActionOption4" />
            <androidx.appcompat.widget.AppCompatSeekBar android:id="@id/action_option_seekBar1" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:max="30" android:progress="10" android:layout_marginStart="8.0dip" android:layout_marginEnd="24.0dip" map:layout_constraintBottom_toBottomOf="@id/action_option_seekBar1_text" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toEndOf="@id/action_option_seekBar1_text" map:layout_constraintTop_toTopOf="@id/action_option_seekBar1_text" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/colorAccent" android:gravity="center_horizontal" android:id="@id/action_warning" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_option_checkbox_3" />
            <com.google.android.material.button.MaterialButton android:id="@id/admin_button_action" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/admin_button" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/action_warning" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton android:id="@id/cancel_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/cancel" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toStartOf="@id/ok_button" map:layout_constraintStart_toStartOf="parent" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    <com.google.android.material.button.MaterialButton android:id="@id/ok_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/ok" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toEndOf="@id/cancel_button" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
</androidx.constraintlayout.widget.ConstraintLayout>